2005-09-07  Thomas Heller  <theller@python.net>

	* Use w9xpopen_d.exe in a debug build.  Handle the release and the
	debug version of MSVCR71 in the same way.

	* Fix the definition of Py_InitModule4 in the import table.  This
	allows to build a debug version of py2exe.

2005-09-06  Thomas Heller  <theller@python.net>

	* Fix the import from extensions in packages.  This made newer
	versions of wxPython (for example) fail.

2005-09-05  Thomas Heller  <theller@python.net>

	* py2exe 0.6.1 released.

	* docs\py2exe.txt: Updated the html-pages.

2005-04-28  Thomas Heller  <theller@python.net>

	* py2exe can now bundle binary extensions and dlls into the zip
	archive, and load them with a custom zipextimporter.  This uses
	code originally written by Joachim Bauch and enhanced by me, which
	simulates the LoadLibrary windows api call.  The exe stubs now use
	runtime dynamic loading of the Python dll.

	* py2exe does now by default include the codecs module and the
	complete encodings package.

	* py2exe\boot_service.py: Patch from Cory Dodt to allow building a
	service from a module inside a package.

	* py2exe\build_exe.py (py2exe.find_needed_modules): Another patch
	from Shane Holloway to handle packages with multiple entries in a
	package's __path__ list.

2004-12-30  Thomas Heller  <theller@python.net>

	* py2exe\build_exe.py (py2exe.find_needed_modules.visit): Patch
	from Shane Holloway for better modulefinder's AddPackagePath
	interactions.

	* source\start.c: Patch from David Bolen, to make the unbuffered
	option work.

2004-10-22  Thomas Heller  <theller@python.net>

	*  py2exe can now create module crosss references in HTML format,
	and displays them in the default browser.

2004-09-22  Thomas Heller  <theller@python.net>

	*  py2exe\build_exe.py: Added the .pyw extension for Python modules.

2004-09-06 Mark Hammond <mhammond@skippinet.com.au>

	* Support for stand-alone ISAPI DLL.

2004-06-02  Mark Hammond <mhammond@skippinet.com.au>